workspaces/optic-engine/src/learn_shape/snapshots/optic_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_primitive_bodies__boolean_results.snap
---
source: workspaces/optic-engine-native/src/learn_shape/result.rs
expression: boolean_results
---
(
    Some(
        "test-id-2",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-2",
                    base_shape_id: "$boolean",
                    name: "",
                },
            ),
        ),
    ],
)
