workspaces/optic-engine/src/learn_shape/snapshots/optic_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_primitive_bodies__number_results.snap
---
source: workspaces/optic-engine-native/src/learn_shape/result.rs
expression: number_results
---
(
    Some(
        "test-id-1",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-1",
                    base_shape_id: "$number",
                    name: "",
                },
            ),
        ),
    ],
)
